Add support jdk '16','17','18'