@@ -356,7 +356,7 @@
                     <inherited>true</inherited>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
+                    <version>3.10.1</version>
                     <configuration>
                         <fork>true</fork>
                         <compilerArgs>
@@ -440,9 +440,8 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M4</version>
+                    <version>3.0.0-M4</version> <!-- M6 DecodeException but got java.nio.BufferOverflowException -->
                     <configuration>
-                        <argLine>-server</argLine>
                         <properties>
                             <property>
                                 <name>usedefaultlisteners</name>
@@ -705,7 +704,15 @@
                 <module>opendj-packages</module>
             </modules>
         </profile>
-
+		<profile>		
+	      <id>jdk16.options</id>
+	      <activation>
+	        <jdk>[16,)</jdk>
+	      </activation>
+	      <properties>
+	        <argLine>--add-exports java.base/sun.security.x509=ALL-UNNAMED --add-exports java.base/sun.security.tools.keytool=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED  --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util.regex=ALL-UNNAMED --add-opens java.base/java.security=ALL-UNNAMED --add-opens java.naming/javax.naming.spi=ALL-UNNAMED</argLine>
+	      </properties>
+	    </profile>
 		<profile>
 	        <id>release-sign-artifacts</id>
 	        <activation>
